@@ -64,6 +64,21 @@ AC_ARG_WITH(maxfiles,
 	AC_DEFINE(MAX_FILES, 20)
 )
 
+dnl --enable-unit-mm : Set default unit for coordinates in status bar to mm
+AC_ARG_ENABLE(unit-mm,
+    [  --enable-unit-mm        Set default unit for coordinates in status bar to mm],
+    [
+        if test $enableval = "yes"; then
+		default_unit="mm"
+	fi
+    ])
+if test "$default_unit" = "mm"; then
+	AC_DEFINE(GERBV_DEFAULT_UNIT, GERBV_MMS)
+else
+	AC_DEFINE(GERBV_DEFAULT_UNIT, GERBV_MILS)
+fi
+
+
 dnl Initialize automake stuff (?)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
 
