@@ -1,3 +1,9 @@
+2002-10-11  Anders Eriksson  <anders@umunet.org>
+
+	* configure.in, acconfig.h, src/gerbv.c: Added configure-option
+	  to change default unit for status bar to millimeters instead
+	  of the built-in default of mils.
+
 2002-10-09  Stefan Petersen  <spe@>
 
 	* src/gerber.c: The undefined aperture fix below is, in princip,
